FINALLY! finished the css issues on the pokemonApp changed pokemonApp-container "overflow" to "auto"

--- a/PortfolioSite/src/navbar.css
+++ b/PortfolioSite/src/navbar.css
@@ -8,6 +8,7 @@ nav {
     width: 100%;
     height: 44px;
     overflow: hidden;
+    
 }
 
 .site-title {
@@ -18,13 +19,14 @@ nav {
 }
 
 .menu-button-mobile {
-    position: absolute;
+    display: none;
+    position:absolute;
     top: 5px;
     left: 5px;
+    z-index: 2;
     border-radius: 10px;
     width: 60px;
     height: 60px;
-    display: block;
     background-color: gray;
     border-style: none;
 }
@@ -78,11 +80,8 @@ li a {
         display: none;
     }
 
-
-}
-
-@media screen and (min-width: 800px){
     .menu-button-mobile {
-        display: none;
+        display: block;
     }
+
 }
